--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,15 @@
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 
     <string name="main_title">Dook app</string>
+    <string name="button_cancel">Cancel</string>
+    <string name="copyright_title">Copyright: </string>
+    <string name="date_title">Date: </string>
+    <string name="description_title">Description: </string>
+    <string name="something_went_wrong">Something went wrong: </string>
+    <string name="button_retry">Retry</string>
+    <string name="pictures_number">Pictures number</string>
+    <string name="enable_asteroid_alarm">Enable asteroid alarm</string>
+    <string name="start_asteroid_alarm">Start asteroid alarm</string>
+    <string name="stop_asteroid_alarm">Stop asteroid alarm</string>
+    <string name="bind_service">Bind service</string>
 </resources>
